--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
-version: "3.9"
+#version: "3.9"
 
 services:
-  app:
-    image: node:18-alpine
-    working_dir: /usr/src/app
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    command: sh -c "npm install && npm run dev"
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # Vite dev server port (matches vite.config.ts)
     ports:
-      - "5173:5173"   # Vite default port
+      - "9911:9911"
     env_file:
       - .env
-    tty: true
+    # Uses CMD from Dockerfile: `npm run dev`
+    # Restart policy for convenience during local dev
+    restart: unless-stopped
